@@ -18,6 +18,7 @@ Missouga Dongi <zelea2@users.sourceforge.net>
 Puneeth Bhat <puneeth_bhat@users.sourceforge.net>
 Kamaleshwar Morjal <kamaleshwar.morjal@gmail.com>
 Debajit <debjit_bis08@users.sourceforge.net>
+Kirantej J L <kirantej1920@gmail.com>
 
 Translators:
 ----------------------------
